--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-geodesy"
+name = "rust-geodesy-esp32"
 version = "0.1.0"
 authors = ["pbrobo"]
 edition = "2021"
@@ -7,7 +7,7 @@ resolver = "2"
 rust-version = "1.77"
 
 [[bin]]
-name = "rust-geodesy"
+name = "rust-geodesy-esp32"
 harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
 
 [profile.release]
